# ida-cyberchef

./: .gitignore  .gitmodules  FAILING_TESTS_ANALYSIS.md  README.md  TESTING_PLAN.md  TEST_FIXES_DOCUMENTATION.md  TEST_IMPLEMENTATION_PLAN.md  TEST_INFRASTRUCTURE_SUMMARY.md  devlog.md  entrypoint.py  ida-plugin.json  justfile  pyproject.toml  readme.md
.github/workflows/: tests.yml
docs/: ASYNC_OPERATIONS.md  SKIPPED_TESTS_AUDIT.md  ops.md
ida_cyberchef/: __init__.py  cyberchef.py  cyberchef_widget.py  main.py
ida_cyberchef/core/: hex_formatter.py  input_parser.py  operation_doc_formatter.py  operation_registry.py  recipe_executor.py  recipe_models.py
ida_cyberchef/data/: operation_schema.json
ida_cyberchef/plugin/: __init__.py
ida_cyberchef/qt_models/: __init__.py  execution_model.py  input_model.py  recipe_model.py
ida_cyberchef/runtime/: __init__.py  base.py  pythonmonkey_runtime.py  quickjs_runtime.py  stpyv8_runtime.py
ida_cyberchef/widgets/: __init__.py  (+8 more)
tests/: README.md  conftest.py  test_compression.py  test_cyberchef.py  test_generate_operation_schema.py  test_hex_formatter.py  test_input_panel.py  test_input_parser.py  test_json_operations.py  test_location_input_widget.py  test_operation_doc_formatter.py  test_operation_registry.py  test_operation_step_widget.py  test_operations_comprehensive.py  test_qt_execution_model.py  test_qt_input_model.py  test_qt_recipe_model.py  test_recipe_executor.py  test_recipe_models.py  test_runtime.py  test_ui_verification.py
tools/: cyberchef_operations.json  generate_docs.py  generate_operation_schema.py
(+203 files in other folders)
