[project]
name = "ida-cyberchef"
version = "0.1.0"
description = "A Qt-based CyberChef interface designed for malware analysis workflows, particularly in IDA Pro"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyside6>=6.10.0",
    "rich>=13.0.0",
    "quickjs>=1.19.2",
]

[project.optional-dependencies]
# Alternative JavaScript runtimes. QuickJS is included by default.
# STPyV8 has better compatibility but larger binary size (~50MB).
# PythonMonkey uses SpiderMonkey and has good interop.
stpyv8 = ["stpyv8>=13.1.201.22"]
pythonmonkey = ["pythonmonkey>=1.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-qt>=4.0",
]

[tool.setuptools.packages.find]
where = ["ida_cyberchef"]

[project.scripts]
cyberchef-qt = "ida_cyberchef.main:main"

[tool.pytest.ini_options]
pythonpath = "."
